[package]
name = "bevy_navgraph"
version = "0.0.1"
edition = "2021"
keywords = ["bevy", "gamedev", "pathfinding"]
license = "MIT"
description = "A navgraph generation plugin for bevy"
repository = "https://github.com/Olle-Lukowski/bevy_navgraph"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.10.1"
bevy_rapier3d = "0.21.0"
rand = "0.8.5"
